# keepassxc

./: CMakeLists.txt
share/translations/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/autotype/: AutoType.cpp  AutoTypeMatch.h  AutoTypeMatchView.cpp  ShortcutWidget.cpp
src/autotype/windows/: CMakeLists.txt
src/autotype/xcb/: AutoTypeXCB.cpp  CMakeLists.txt
src/browser/: BrowserEntryConfig.cpp  BrowserService.cpp  CMakeLists.txt  NativeMessageInstaller.cpp
src/cli/: AttachmentExport.cpp  AttachmentImport.cpp  CMakeLists.txt  DatabaseInfo.cpp  TextStream.cpp  TextStream.h  Utils.cpp  Utils.h  keepassxc-cli.cpp
src/core/: Clock.cpp  Clock.h  Database.cpp  Entry.cpp  EntryAttachments.cpp  EntryAttachments.h  EntryAttributes.cpp  Group.cpp  Merger.cpp  PassphraseGenerator.cpp  PasswordGenerator.cpp  PasswordHealth.cpp  SignalMultiplexer.cpp  SignalMultiplexer.h  Tools.cpp
src/crypto/: Crypto.cpp  SymmetricCipher.cpp
src/fdosecrets/: CMakeLists.txt
src/format/: CsvExporter.cpp  CsvParser.cpp  Kdbx3Reader.cpp  Kdbx3Writer.cpp  Kdbx4Reader.cpp  Kdbx4Writer.cpp  KdbxReader.cpp  KdbxWriter.cpp  KdbxWriter.h  KdbxXmlReader.cpp  KdbxXmlReader.h  KdbxXmlWriter.cpp  KeePass1Reader.cpp  KeePass1Reader.h  KeePass2Writer.cpp  OpVaultReader.cpp  OpVaultReaderAttachments.cpp  OpVaultReaderBandEntry.cpp  OpVaultReaderSections.cpp
src/gui/: Application.cpp  DatabaseIcons.h  DatabaseOpenDialog.cpp  DatabaseTabWidget.cpp  DatabaseWidget.cpp  EntryPreviewWidget.cpp  (+7 more)
src/sshagent/: BinaryStream.cpp  CMakeLists.txt  KeeAgentSettings.cpp  OpenSSHKey.cpp
tests/: CMakeLists.txt  FailDevice.cpp  FailDevice.h  TestCli.cpp  TestCsvExporter.cpp  TestHashedBlockStream.cpp  TestHibp.cpp  TestKeePass1Reader.cpp  TestKeePass2Format.cpp  TestSymmetricCipher.cpp
(+41 files in other folders)
